[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hospital-resource-management"
version = "1.0.0"
dependencies = [
    "openenv-core>=0.2.0",
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "requests>=2.31.0",
    "openai>=1.3.0",
    "pyyaml>=6.0.1"
]

[project.scripts]
server = "server:app"

[tool.setuptools]
packages = ["."]
